[package]
name = "rasgi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "rasgi"

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
anyhow = "1.0.71"
fern = "0.6.2"
ipc-channel = { version = "0.16.1", features = ["async"] }
log = "0.4.19"
pyo3 = { version = "0.19.1", features = ["serde", "extension-module", "abi3-py38"]}
pyo3-log = "0.8.3"
pythonize = "0.19.0"
serde = { version = "1.0.171", features = ["derive"] }
